# similarity

./: .gitignore  __init__.py  pyproject.toml  similarity.code-workspace
document/: main.py  requirement.txt  similarity.py  stopword.py  stopwords.list
extractor/: __init__.py
extractor/Document/: Document.py  MsWord.py  Pdf.py  __init__.py
server/: server.py
utils/: FileUtils.py  pyproject.toml
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx
web/src/components/FileUpload/: FileItem.tsx  FileUpload.tsx  scrollbar.css
web/src/pages/: UploadPage.tsx
