[tool.poetry]
name = "similarity"
version = "0.1.0"
description = ""
authors = ["ikhwanul.labib <ikhwanul.labib@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
